--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title                    : "Realistic 3D Vision"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "MCP"
-description              : "고양이와 함께하는 개발자"
+description              : "MCP"
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
