--- a/_config.yml
+++ b/_config.yml
@@ -93,9 +93,9 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "무코포"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
+  bio              : "고양이와 함께하는 개발"
   location         : "Somewhere"
   email            :
   links:
